Some code for transferring between pandas and pytorch data types, and beginning of pytorch model training code with LBFGS.

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,105 +2,179 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.830408</th>\n",
+       "      <td>0.194983</td>\n",
+       "      <td>0.481360</td>\n",
+       "      <td>0.593872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.162258</th>\n",
+       "      <td>0.786237</td>\n",
+       "      <td>0.628161</td>\n",
+       "      <td>0.489599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.455702</th>\n",
+       "      <td>0.228044</td>\n",
+       "      <td>0.749182</td>\n",
+       "      <td>0.907533</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>B</th>\n",
+       "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>A</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0.830408</th>\n",
+       "      <td>0.194983</td>\n",
+       "      <td>0.481360</td>\n",
+       "      <td>0.593872</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.162258</th>\n",
+       "      <td>0.786237</td>\n",
+       "      <td>0.628161</td>\n",
+       "      <td>0.489599</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0.455702</th>\n",
+       "      <td>0.228044</td>\n",
+       "      <td>0.749182</td>\n",
+       "      <td>0.907533</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "import pandas\n",
+    "import pandas, numpy\n",
     "\n",
-    "training_data = pandas.read_csv('data/train.csv')\n",
-    "training_data = training_data.sample(n=training_data.shape[0])"
+    "training_data = pandas.DataFrame(numpy.random.rand(3, 4), columns=list('ABCD')).set_index('A')\n",
+    "training_data = training_data.sample(n=training_data.shape[0])\n",
+    "training_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[ 0.1950,  0.4814,  0.5939],\n        [ 0.7862,  0.6282,  0.4896],\n        [ 0.2280,  0.7492,  0.9075]], dtype=torch.float64)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "def folds(training_data: pandas.DataFrame, num_folds: int):\n",
-    "    rows, cols = training_data.shape\n",
-    "    fold_indexes = [i * len(training_data) // num_folds for i in range(num_folds + 1)]\n",
-    "    for i in range(num_folds):\n",
-    "        validation_subset = training_data.iloc[fold_indexes[i]:fold_indexes[i + 1]]\n",
-    "        training_subset = pandas.concat([\n",
-    "            training_data.iloc[:fold_indexes[i]],\n",
-    "            training_data.iloc[fold_indexes[i + 1]:]\n",
-    "        ])\n",
-    "        assert len(training_subset) + len(validation_subset) == rows, (\n",
-    "            'training size {}, validation size {} should add to total size {}'.format(\n",
-    "                len(training_subset), len(validation_subset), len(training_data)))\n",
-    "        yield training_subset, validation_subset\n",
+    "import torch\n",
     "\n",
-    "\n",
-    "def test_folds():\n",
-    "    training_data = pandas.DataFrame(data=numpy.random.rand(4, 4), columns=list('ABCD'))\n",
-    "    num_folds = 3\n",
-    "    actual_folds = [t for t in folds(training_data, num_folds)]\n",
-    "    expected_folds = [\n",
-    "        # Expected validation folds are 0:1, 1:2, and 2:4.\n",
-    "        (pandas.concat([training_data.iloc[:0], training_data.iloc[1:]]), training_data.iloc[0:1]),\n",
-    "        (pandas.concat([training_data.iloc[:1], training_data.iloc[2:]]), training_data.iloc[1:2]),\n",
-    "        (pandas.concat([training_data.iloc[:2], training_data.iloc[4:]]), training_data.iloc[2:4])\n",
-    "    ]\n",
-    "    assert num_folds == len(actual_folds), 'expected {} folds, but found {} folds.'.format(num_folds, len(actual_folds))\n",
-    "    for ((expected_train, expected_val), (actual_train, actual_val)) in zip(expected_folds, actual_folds):\n",
-    "        assert expected_train.equals(actual_train), (\n",
-    "            'From training data:\\n{}\\nexpected training subset:\\n{}\\nactual training subset:\\n{}\\n'.format(\n",
-    "                training_data, expected_train, actual_train))\n",
-    "        assert expected_val.equals(actual_val), (\n",
-    "            'From training data:\\n{}\\nexpected validation subset:\\n{}\\nactual validation subset:\\n{}\\n'.format(\n",
-    "                training_data, expected_val, actual_val))\n",
-    "\n",
-    "\n",
-    "test_folds()"
+    "t: torch.Tensor = torch.from_numpy(training_data.values)\n",
+    "t"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import typing\n",
-    "import numpy\n",
-    "import numpy.random\n",
+    "t = t.float()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as functional\n",
+    "import torch.optim as optim\n",
     "\n",
-    "\n",
-    "def cross_validate(training_data: pandas.DataFrame, \n",
-    "                   validation_score: typing.Callable[[pandas.DataFrame, pandas.DataFrame], float],\n",
-    "                   num_folds: int) -> typing.Tuple[float, typing.List[float]]:\n",
-    "    scores = []\n",
-    "    for training_subset, validation_subset in folds(training_data, num_folds):\n",
-    "        scores.append(validation_score(training_subset, validation_subset))\n",
-    "    return sum(scores)/len(scores), scores\n",
-    "\n",
-    "\n",
-    "def test_cross_validate():\n",
-    "    def next_int(x: pandas.DataFrame, y: pandas.DataFrame) -> float:\n",
-    "        next_int.x = next_int.x + 1\n",
-    "        return next_int.x\n",
-    "    next_int.x = 0\n",
-    "    \n",
-    "    training_data = pandas.DataFrame(data=numpy.random.randn(4, 4), columns=['A', 'B', 'C', 'D'])\n",
-    "    num_folds = 3\n",
-    "    mean_score, all_scores = cross_validate(training_data, next_int, num_folds)\n",
-    "    assert tuple(all_scores) == (1, 2, 3), 'Scores should be (1, 2, 3), but are {}.'.format(all_scores)\n",
-    "    assert mean_score == 2, 'Mean score should be 2, but is {}.'.format(mean_score)\n",
-    "\n",
-    "\n",
-    "test_cross_validate()\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "linear_model = nn.Linear(training_data.shape[1] - 1)\n",
+    "def loss()\n",
+    "loss = torch.sqrt(nn.MSELoss())\n",
+    "optimizer = optim.LBFGS(linear_model.parameters())"
    ]
   }
  ],
