Finished rough code for pandas-numpy-pytorch-numpy-pandas training code.

--- a/scratch.ipynb
+++ b/scratch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -41,22 +41,22 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0.830408</th>\n",
-       "      <td>0.194983</td>\n",
-       "      <td>0.481360</td>\n",
-       "      <td>0.593872</td>\n",
+       "      <th>0.106863</th>\n",
+       "      <td>0.301190</td>\n",
+       "      <td>0.728405</td>\n",
+       "      <td>0.695150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.162258</th>\n",
-       "      <td>0.786237</td>\n",
-       "      <td>0.628161</td>\n",
-       "      <td>0.489599</td>\n",
+       "      <th>0.205978</th>\n",
+       "      <td>0.566542</td>\n",
+       "      <td>0.997007</td>\n",
+       "      <td>0.358530</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.455702</th>\n",
-       "      <td>0.228044</td>\n",
-       "      <td>0.749182</td>\n",
-       "      <td>0.907533</td>\n",
+       "      <th>0.387484</th>\n",
+       "      <td>0.794363</td>\n",
+       "      <td>0.798005</td>\n",
+       "      <td>0.261146</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -94,29 +94,29 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0.830408</th>\n",
-       "      <td>0.194983</td>\n",
-       "      <td>0.481360</td>\n",
-       "      <td>0.593872</td>\n",
+       "      <th>0.106863</th>\n",
+       "      <td>0.301190</td>\n",
+       "      <td>0.728405</td>\n",
+       "      <td>0.695150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.162258</th>\n",
-       "      <td>0.786237</td>\n",
-       "      <td>0.628161</td>\n",
-       "      <td>0.489599</td>\n",
+       "      <th>0.205978</th>\n",
+       "      <td>0.566542</td>\n",
+       "      <td>0.997007</td>\n",
+       "      <td>0.358530</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>0.455702</th>\n",
-       "      <td>0.228044</td>\n",
-       "      <td>0.749182</td>\n",
-       "      <td>0.907533</td>\n",
+       "      <th>0.387484</th>\n",
+       "      <td>0.794363</td>\n",
+       "      <td>0.798005</td>\n",
+       "      <td>0.261146</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[ 0.1950,  0.4814,  0.5939],\n        [ 0.7862,  0.6282,  0.4896],\n        [ 0.2280,  0.7492,  0.9075]], dtype=torch.float64)"
+       "(tensor([[ 0.3012,  0.7284],\n         [ 0.5665,  0.9970],\n         [ 0.7944,  0.7980]]), tensor([[ 0.6952],\n         [ 0.3585],\n         [ 0.2611]]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,17 +148,57 @@
    "source": [
     "import torch\n",
     "\n",
-    "t: torch.Tensor = torch.from_numpy(training_data.values)\n",
-    "t"
+    "data_tensor = torch.from_numpy(training_data.drop(columns='D').values).float()\n",
+    "label_tensor = torch.from_numpy(training_data[['D']].values).float()\n",
+    "(data_tensor, label_tensor)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(0.7496)\ntensor(0.2902)\ntensor(0.1626)\ntensor(0.1124)\ntensor(1.00000e-02 *\n       8.5221)\ntensor(1.00000e-02 *\n       6.5617)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(1.00000e-02 *\n       4.9681)\ntensor(1.00000e-02 *\n       3.6166)\ntensor(1.00000e-02 *\n       2.4805)\ntensor(1.00000e-02 *\n       1.5103)\n"
+     ]
+    }
+   ],
    "source": [
-    "t = t.float()"
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as functional\n",
+    "import torch.optim as optim\n",
+    "\n",
+    "\n",
+    "linear_model = nn.Linear(training_data.shape[1] - 1, 1)\n",
+    "mse_loss = nn.MSELoss()\n",
+    "\n",
+    "\n",
+    "def rmse(t1, t2):\n",
+    "    return torch.sqrt(mse_loss(t1, t2))\n",
+    "\n",
+    "\n",
+    "optimizer = optim.LBFGS(linear_model.parameters(), lr=0.01)\n",
+    "\n",
+    "\n",
+    "def evaluate_loss_closure():\n",
+    "    optimizer.zero_grad()\n",
+    "    loss: torch.Tensor = rmse(linear_model(data_tensor), label_tensor)\n",
+    "    loss.backward()\n",
+    "    return loss\n",
+    "\n",
+    "\n",
+    "for i in range(10):\n",
+    "    print(optimizer.step(evaluate_loss_closure))"
    ]
   },
   {
@@ -167,14 +207,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import torch.nn as nn\n",
-    "import torch.nn.functional as functional\n",
-    "import torch.optim as optim\n",
-    "\n",
-    "linear_model = nn.Linear(training_data.shape[1] - 1)\n",
-    "def loss()\n",
-    "loss = torch.sqrt(nn.MSELoss())\n",
-    "optimizer = optim.LBFGS(linear_model.parameters())"
+    "predictions: torch.Tensor = linear_model(data_tensor)\n",
+    "predictions = predictions.data\n",
+    "predictions_dataframe = pandas.DataFrame(data=predictions.numpy(), columns=['target'], index=training_data.index)\n",
+    "predictions_dataframe"
    ]
   }
  ],
